<resources>
    <string name="app_name">99Spicy.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In and Start Shopping</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="welcome">Welcome</string>
    <string name="generate_otp">Generate otp</string>
    <string name="or">OR</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">My Cart</string>
    <string name="title_profile">Profile</string>
    <string name="create_account">create account</string>
    <string name="search_products">Search Products</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="dawat_biriyani_basmati_rice">Dawat Biriyani Basmati Rice</string>
    <string name="_50_off">50% Off</string>
    <string name="_99_00_rs">99.00 RS/-</string>
    <string name="add">Add</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="place_order">Place Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="wallet">My Wallet</string>
    <string name="orders">My Orders</string>
    <string name="delivery_add">Delivery Address</string>
    <string name="shareandearn">Share and Earn</string>
    <string name="rate_us">Rate Us</string>
    <string name="demo_add">Deliver To: Kolkata, West Bengal, 730001</string>
    <string name="number_verified_message">Phone number verified</string>
    <string name="_12345">12345</string>
    <string name="verify">Verify</string>
    <string name="save_address">Save Address</string>
    <string name="full_name">Full Name</string>
    <string name="flat_no">Flat No.(Optional)</string>
    <string name="building_no_house_no">Building No./House No./Building Name</string>
    <string name="locality">Locality</string>
    <string name="landmark">LandMark</string>
    <string name="city_name">City Name</string>
    <string name="district_name">District Name</string>
    <string name="state_name">State Name</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="add_money">Add Money</string>
    <string name="already_user_login">Already User? Login</string>
    <string name="postal_code">Postal Code</string>
    <string name="credit_card_debit_card_upi">Card/ UPI</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="select_a_payment_method">Select A Payment Method</string>
    <string name="paytm">PayTm</string>
    <string name="title_activity_payment">Payment Processing</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_to_wallet">Add To Wallet</string>
    <string name="placing_order">Placing Order</string>
    <string name="order_status">Order Status</string>
    <string name="order_total">Order Total</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="no_of_product">No. Of Product</string>
    <string name="order_date">Order Date</string>
    <string name="grant_location_permisson">Grant Location Permission</string>
    <string name="location_permission_message">We need to access your location in order to show you products accordingly</string>
    <string name="set_your_delivery_address">Set Your Delivery Address</string>
    <string name="subscribe_products">Subscribe Products</string>
    <string name="subscribe_intro_description">Subscribe any Dairy Products once and we will deliver them daily(each day of a week you select) to you</string>
    <string name="edit">Edit</string>
    <string name="you_don_t_have_any_saved_address">You don\'t have any saved Address</string>
    <string name="address_book">Address Book</string>
    <string name="set_as_default">Set as Default</string>
    <string name="zero">1</string>
    <string name="app_tag">Best Online Grocery Store</string>
    <string name="newly_arrival">New Arrivals</string>
    <string name="newly_added_product_image">Newly added product image</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="notification_channel" translatable="false">Orders notification Channel</string>
    <string name="start_date">Start Date</string>
    <string name="select_days">Select Days</string>
    <string name="subscription_instruction">* Products Price may change as per market rates\n* You\'ll be charged weekly from your wallet\n* You can cancel your subscription after a week once started</string>
    <string name="product_image">product image</string>
</resources>