<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.payment.PaymentMethodFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_payment_method"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:layout_margin="@dimen/dimen_16dp"
            style="@style/TextAppearance.AppCompat.Title" />

        <RadioGroup
            android:id="@+id/payment_method_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/razor_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableEnd="@drawable/card"
                android:drawablePadding="@dimen/dimen_16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/credit_card_debit_card_upi" />

            <RadioButton
                android:id="@+id/paytm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:drawableEnd="@drawable/ic_paytm_logo"
                android:text="@string/paytm"
                android:enabled="false"
                android:drawablePadding="@dimen/dimen_32dp"
                android:fontFamily="@font/montserrat" />

            <RadioButton
                android:id="@+id/pm_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/wallet_b"
                android:drawablePadding="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wallet" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed_to_pay_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_32dp"
            android:text="@string/proceed_to_pay" />
    </LinearLayout>
</layout>