<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.a99Spicy.a99spicy.domain.DomainProduct"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_6dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp">

            <LinearLayout
                android:id="@+id/new_iem_quantity_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/new_add_to_cart_button">

                <ImageButton
                    android:id="@+id/new_item_minus_quantity_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_baseline_indeterminate_check_box_24" />

                <TextView
                    android:id="@+id/new_product_qty_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/zero" />

                <ImageButton
                    android:id="@+id/new_add_quantity_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_baseline_add_box_24" />
            </LinearLayout>

            <ImageView
                android:id="@+id/new_item_imageView"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/newly_added_product_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/grocery_place_holder" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:maxLines="2"
                android:text="@{product.name}"
                app:layout_constraintEnd_toEndOf="@+id/new_item_imageView"
                app:layout_constraintStart_toStartOf="@+id/new_item_imageView"
                app:layout_constraintTop_toBottomOf="@+id/new_item_imageView"
                tools:text="@string/dawat_biriyani_basmati_rice" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{product.salePrice+` Rs/-`}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView39"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView39"
                tools:text="@string/_99_00_rs" />

            <Button
                android:id="@+id/new_add_to_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="@+id/textView40"
                app:layout_constraintStart_toStartOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView40" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>