<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.a99Spicy.a99spicy.network.OrderResponse" />

        <variable
            name="clickListener"
            type="com.a99Spicy.a99spicy.ui.order.MyOrderListItemClickListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardBackgroundColor="@android:color/white"
        android:background="@android:color/white"
        app:cardElevation="@dimen/dimen_6dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:onClick="@{()->clickListener.onMyOrderListItemClick(order)}">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@{order.total+` Rs/-`}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/_99_00_rs" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@{order.status}"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            tools:text="@string/processing" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/order_total"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/no_of_product"
            app:layout_constraintEnd_toEndOf="@+id/textView25"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@{String.valueOf(order.lineItems.size())}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="@+id/textView26"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            tools:text="3" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order_date"
            android:fontFamily="@font/open_sans"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            tools:text="22-26-2020" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>